2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_colorblind.c (lut_lookup): actually do a binary
	search, not a linear search starting in the middle.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-close.c
	(gimp_display_shell_close_dialog): added an icon to the "Don't Save"
	button.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdnd.c: don't add the same target multiple times.
	This used to happen when  gimp_dnd_foo_source_add() is called
	after calling gimp_dnd_drag_source_set_by_type().

2005-03-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablecombobox.c
	* libgimp/gimpimagecombobox.c: accept DND of image / drawable IDs.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptoolbox-image-area.c: added a hint about XDS to
	the tooltip, but only if compiled for X11.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_colorblind.c: use the same LUT for all color
	channels. Do a binary search in the LUT for the backward
	transformation.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_colorblind.c: applied a modified version of
	a patch by Gautier Portet that introduces a LUT for the gamma
	correction (bug #101256). Also moved constants out of the
	CdisplayColorblind struct.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: disconnect from the config in dispose
	instead of in finalize.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: better error message (bug #171646).

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.c (gimp_dockable_add): initialize the
	tab style to a supported one. Fixes bug #171567.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: applied patch from David Costanzo that
	initializes unspecified pixels in RLE bitmaps. Fixes bug #171562.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c